# openscreener

./: .gitignore  README.md  promt.md  pyproject.toml
docs/: PROJECT_SPEC.md
examples/html/: balance_sheet.html  cash_flow.html  peers.html  peratio.html  profit_loss.html  pros_cons.html  quarterly_results.html  ratios.html  shareholding.html  summary.html
src/openscreener/: __init__.py  batch_stock.py  exceptions.py  scraper.py  screener.py  stock.py
src/openscreener/parsers/: __init__.py  _helpers.py  chart_parser.py
test/: all.py  batch.py  comp.py  infy.py  nifty.py  pwl_summary.py  qa.py  qa_one.py  shri.py  shri_peers.py
tests/: _support.py  test_batch_stock.py  test_html_tree.py  test_index_class.py  test_openscreener.py  test_parser_helpers.py  test_parsers.py  test_scraper.py  test_screener.py  test_stock_methods.py
