[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscreener"
version = "0.1.0"
description = "A small Python package scaffold for stock screening workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Navaneeth" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openscreener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
