[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscreener"
version = "0.1.0"
description = "A Playwright-powered Python package for extracting structured financial data from Screener.in."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Navaneeth" }
]
dependencies = [
  "playwright>=1.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openscreener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
